// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/ErrorSummary/ErrorSummary Defaults play-test 1`] = `
<div data-test-block="true">
  <div aria-live="assertive"
       tabindex="-1"
       aria-atomic="true"
  >
  </div>
</div>
`;

exports[`Tester/ErrorSummary/ErrorSummary WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div id="htmlId"
       lang="nb"
       data-testid="123ID"
       aria-live="assertive"
       tabindex="-1"
       aria-atomic="true"
  >
    <div class="_errorSummary_e7s87_1 dummyClassname">
      <div class="_iconContainer_e7s87_15">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_e7s87_15"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
      </div>
      <div class="_summaryContainer_e7s87_40">
        <h2 class="_heading_1okn6_1 _heading_level4_1okn6_43 _heading_hasSpacingSmall_1okn6_54 ">
          For å gå videre må du rette opp 0 feil:
        </h2>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/ErrorSummary/ErrorSummary WithChildren play-test 1`] = `
<div data-test-block="true">
  <div aria-live="assertive"
       tabindex="-1"
       aria-atomic="true"
  >
    <div class="_errorSummary_e7s87_1 ">
      <div class="_iconContainer_e7s87_15">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_e7s87_15"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
      </div>
      <div class="_summaryContainer_e7s87_40">
        <h2 class="_heading_1okn6_1 _heading_level4_1okn6_43 _heading_hasSpacingSmall_1okn6_54 ">
          For å gå videre må du rette opp 2 feil:
        </h2>
        <ul class="_linkGroup_w23nb_1   ">
          <li class="_linkGroupItem_w23nb_8">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M1.8 12.6v-1.8h16.8l-5.2-5.1 1.4-1.3 7.5 7.3-7.7 7.3-1.4-1.3 5.2-5.1H1.8Z">
              </path>
            </svg>
            <a class="_link_1qzdp_1  "
               href="#id_1"
            >
              Husk å fylle ut type varer
            </a>
          </li>
          <li class="_linkGroupItem_w23nb_8">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M1.8 12.6v-1.8h16.8l-5.2-5.1 1.4-1.3 7.5 7.3-7.7 7.3-1.4-1.3 5.2-5.1H1.8Z">
              </path>
            </svg>
            <a class="_link_1qzdp_1  "
               href="#id_2"
            >
              Selger du varer og tjenester for egen regning?
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/ErrorSummary/ErrorSummary WithChildrenAndContent smoke-test 1`] = `
<div data-test-block="true">
  <div aria-live="assertive"
       tabindex="-1"
       aria-atomic="true"
  >
    <div class="_errorSummary_e7s87_1 ">
      <div class="_iconContainer_e7s87_15">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_e7s87_15"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
      </div>
      <div class="_summaryContainer_e7s87_40">
        <h2 class="_heading_1okn6_1 _heading_level4_1okn6_43 _heading_hasSpacingSmall_1okn6_54 ">
          For å gå videre må du rette opp 2 feil:
        </h2>
        <ul class="_linkGroup_w23nb_1   ">
          <li class="_linkGroupItem_w23nb_8">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M1.8 12.6v-1.8h16.8l-5.2-5.1 1.4-1.3 7.5 7.3-7.7 7.3-1.4-1.3 5.2-5.1H1.8Z">
              </path>
            </svg>
            <a class="_link_1qzdp_1  "
               href="#id_1"
            >
              Husk å fylle ut type varer
            </a>
          </li>
          <li class="_linkGroupItem_w23nb_8">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M1.8 12.6v-1.8h16.8l-5.2-5.1 1.4-1.3 7.5 7.3-7.7 7.3-1.4-1.3 5.2-5.1H1.8Z">
              </path>
            </svg>
            <a class="_link_1qzdp_1  "
               href="#id_2"
            >
              Selger du varer og tjenester for egen regning?
            </a>
          </li>
        </ul>
        <div class="_content_e7s87_54 ">
          <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
            Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/ErrorSummary/ErrorSummary WithChildrenAndContentBreakpointXs smoke-test 1`] = `
<div data-test-block="true">
  <div aria-live="assertive"
       tabindex="-1"
       aria-atomic="true"
  >
    <div class="_errorSummary_e7s87_1 ">
      <div class="_iconContainer_e7s87_15">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_e7s87_15"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
      </div>
      <div class="_summaryContainer_e7s87_40">
        <h2 class="_heading_1okn6_1 _heading_level4_1okn6_43 _heading_hasSpacingSmall_1okn6_54 ">
          For å gå videre må du rette opp 2 feil:
        </h2>
        <ul class="_linkGroup_w23nb_1   ">
          <li class="_linkGroupItem_w23nb_8">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M1.8 12.6v-1.8h16.8l-5.2-5.1 1.4-1.3 7.5 7.3-7.7 7.3-1.4-1.3 5.2-5.1H1.8Z">
              </path>
            </svg>
            <a class="_link_1qzdp_1  "
               href="#id_1"
            >
              Husk å fylle ut type varer
            </a>
          </li>
          <li class="_linkGroupItem_w23nb_8">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M1.8 12.6v-1.8h16.8l-5.2-5.1 1.4-1.3 7.5 7.3-7.7 7.3-1.4-1.3 5.2-5.1H1.8Z">
              </path>
            </svg>
            <a class="_link_1qzdp_1  "
               href="#id_2"
            >
              Selger du varer og tjenester for egen regning?
            </a>
          </li>
        </ul>
        <div class="_content_e7s87_54 ">
          <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
            Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/ErrorSummary/ErrorSummary WithChildrenAndContentMobile smoke-test 1`] = `
<div data-test-block="true">
  <div aria-live="assertive"
       tabindex="-1"
       aria-atomic="true"
  >
    <div class="_errorSummary_e7s87_1 ">
      <div class="_iconContainer_e7s87_15">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_e7s87_15"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
      </div>
      <div class="_summaryContainer_e7s87_40">
        <h2 class="_heading_1okn6_1 _heading_level4_1okn6_43 _heading_hasSpacingSmall_1okn6_54 ">
          For å gå videre må du rette opp 2 feil:
        </h2>
        <ul class="_linkGroup_w23nb_1   ">
          <li class="_linkGroupItem_w23nb_8">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M1.8 12.6v-1.8h16.8l-5.2-5.1 1.4-1.3 7.5 7.3-7.7 7.3-1.4-1.3 5.2-5.1H1.8Z">
              </path>
            </svg>
            <a class="_link_1qzdp_1  "
               href="#id_1"
            >
              Husk å fylle ut type varer
            </a>
          </li>
          <li class="_linkGroupItem_w23nb_8">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M1.8 12.6v-1.8h16.8l-5.2-5.1 1.4-1.3 7.5 7.3-7.7 7.3-1.4-1.3 5.2-5.1H1.8Z">
              </path>
            </svg>
            <a class="_link_1qzdp_1  "
               href="#id_2"
            >
              Selger du varer og tjenester for egen regning?
            </a>
          </li>
        </ul>
        <div class="_content_e7s87_54 ">
          <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
            Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/ErrorSummary/ErrorSummary WithContent play-test 1`] = `
<div data-test-block="true">
  <div aria-live="assertive"
       tabindex="-1"
       aria-atomic="true"
  >
    <div class="_errorSummary_e7s87_1 ">
      <div class="_iconContainer_e7s87_15">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_e7s87_15"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
      </div>
      <div class="_summaryContainer_e7s87_40">
        <h2 class="_heading_1okn6_1 _heading_level4_1okn6_43 _heading_hasSpacingSmall_1okn6_54 ">
          Inntektsmottaker inneholder 2 feil:
        </h2>
        <div class="_content_e7s87_54 _contentWithoutChildren_e7s87_57">
          <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
            Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/ErrorSummary/ErrorSummary WithInput play-test 1`] = `
<div data-test-block="true">
  <div class="bottomSpacingXL">
    <label id="labelId-:rj:"
           class="_label_348na_5"
           for="input_aar"
    >
      År
    </label>
    <input id="input_aar"
           class="_textbox_1rnbk_5"
           autocomplete="off"
           required
           aria-describedby="textFieldErrorId-:rh:"
           aria-invalid="true"
           value="1009"
    >
    <div id="textFieldErrorId-:rh:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_1c261_13 ">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _errorMessageIcon_1c261_24"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
        <p class="_errorMessageText_1c261_29">
          Inntekståret må være etter 2008
        </p>
      </div>
    </div>
  </div>
  <div aria-live="assertive"
       tabindex="-1"
       aria-atomic="true"
  >
    <div class="_errorSummary_e7s87_1 ">
      <div class="_iconContainer_e7s87_15">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_e7s87_15"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
      </div>
      <div class="_summaryContainer_e7s87_40">
        <h2 class="_heading_1okn6_1 _heading_level4_1okn6_43 _heading_hasSpacingSmall_1okn6_54 ">
          For å gå videre må du rette opp 1 feil:
        </h2>
        <ul class="_linkGroup_w23nb_1   ">
          <li class="_linkGroupItem_w23nb_8">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M1.8 12.6v-1.8h16.8l-5.2-5.1 1.4-1.3 7.5 7.3-7.7 7.3-1.4-1.3 5.2-5.1H1.8Z">
              </path>
            </svg>
            <a class="_link_1qzdp_1  "
               href="#input_aar"
            >
              Inntekståret må være etter 2008
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/ErrorSummary/ErrorSummary WithRef play-test 1`] = `
<div data-test-block="true">
  <div aria-live="assertive"
       tabindex="-1"
       aria-atomic="true"
       id="dummyIdForwardedFromRef"
  >
  </div>
</div>
`;

exports[`Tester/ErrorSummary/ErrorSummary WithShadowRootNode play-test 1`] = `
<div data-test-block="true">
  <errorsummary-customelement>
  </errorsummary-customelement>
</div>
`;

exports[`Tester/ErrorSummary/ErrorSummary WithTitleAs play-test 1`] = `
<div data-test-block="true">
  <div aria-live="assertive"
       tabindex="-1"
       aria-atomic="true"
  >
    <div class="_errorSummary_e7s87_1 ">
      <div class="_iconContainer_e7s87_15">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_e7s87_15"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
      </div>
      <div class="_summaryContainer_e7s87_40">
        <h1 class="_heading_1okn6_1 _heading_level4_1okn6_43 _heading_hasSpacingSmall_1okn6_54 ">
          For å gå videre må du rette opp 2 feil:
        </h1>
        <ul class="_linkGroup_w23nb_1   ">
          <li class="_linkGroupItem_w23nb_8">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M1.8 12.6v-1.8h16.8l-5.2-5.1 1.4-1.3 7.5 7.3-7.7 7.3-1.4-1.3 5.2-5.1H1.8Z">
              </path>
            </svg>
            <a class="_link_1qzdp_1  "
               href="#id_1"
            >
              Husk å fylle ut type varer
            </a>
          </li>
          <li class="_linkGroupItem_w23nb_8">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_w23nb_14 _icon_forward_w23nb_26 "
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M1.8 12.6v-1.8h16.8l-5.2-5.1 1.4-1.3 7.5 7.3-7.7 7.3-1.4-1.3 5.2-5.1H1.8Z">
              </path>
            </svg>
            <a class="_link_1qzdp_1  "
               href="#id_2"
            >
              Selger du varer og tjenester for egen regning?
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
